# gowithquantum

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
gowithquantum/: __init__.py  agent.py  cli.py  quantum_runner.py  server.py
shared/: steps.json
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/_legacy/: old-prototype.html  style-guide.html
web/src/: App.tsx  index.css  main.tsx
web/src/components/run/: AdvantagePanel.tsx  CircuitDiagram.tsx  CodePanel.tsx  ExplainPanel.tsx  Histogram.tsx  Inspector.tsx  PhaseBar.tsx  PlanTimeline.tsx  ReportDialog.tsx  ReportPanel.tsx  ResultCard.tsx
web/src/components/shared/: EmptyState.tsx  GlossaryTerm.tsx  JobCard.tsx  PageHeader.tsx  StatGrid.tsx  StatusBadge.tsx  VerdictBadge.tsx
web/src/components/shell/: KetLogo.tsx  NewWorkspaceDialog.tsx  SideNav.tsx  nav.ts
web/src/components/solve/: FitCheck.tsx
web/src/data/: fit.ts  glossary.ts  mock.ts  models.ts
web/src/lib/: time.ts
web/src/pages/: AlgorithmDesign.tsx  AnalysisDebug.tsx  Billing.tsx  ClassicalSimulation.tsx  Collaboration.tsx  Dashboard.tsx  Experiments.tsx  Files.tsx  HardwareExecution.tsx  Library.tsx  LiteratureReview.tsx  NewTask.tsx  Outputs.tsx  ProblemIntake.tsx  Providers.tsx  Queue.tsx  Reports.tsx  ResourceEstimation.tsx  RunDetail.tsx  Settings.tsx  StayingCurrent.tsx
web/src/protocol/: events.ts  generateResult.ts  mockRunStream.ts  qa.ts
web/src/store/: AppStore.tsx  useRunSimulation.ts
web/src/theme/: brand.ts
(+6 files in other folders)
